--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,3 +4,5 @@
 // modules
 @import './modules/global';
 @import './modules/neural-network';
+@import './modules/layer';
+@import './modules/neuron';
