--- a/src/scss/modules/layer.scss
+++ b/src/scss/modules/layer.scss
@@ -6,18 +6,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
+
+  .layer__header {}
+  .layer__footer {}
 
   .layer__neurons {
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .layer__info {
-    user-select: none;
     display: flex;
     flex-direction: column;
     justify-content: center;
