--- a/src/scss/modules/neural-network.scss
+++ b/src/scss/modules/neural-network.scss
@@ -3,17 +3,24 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 80%;
-  height: 75%;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
+
+  .neural-network__stats {
+    padding: 10px;
+    position: absolute;
+  }
 
   .neural-network__layers {
     top: 0;
     left: 0;
-    width: 100%;
+    width: 80%;
     height: 100%;
     display: flex;
+    padding: 10px;
+    border-right: 1px solid $white;
 
     .neural-network__label {
       height: 100%;
@@ -23,15 +30,13 @@
     }
   }
 
-  .neural-network__stats {
-    margin-bottom: 10px;
-  }
-
   .neural-network__controls {
     width: 100%;
     display: flex;
     justify-content: flex-start;
     user-select: none;
+    border-top: 1px solid $white;
+    padding: 10px;
 
     .neural-network__control {
       padding: 10px;
