--- a/src/scss/modules/layer.scss
+++ b/src/scss/modules/layer.scss
@@ -7,9 +7,16 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  position: relative;
 
-  .layer__header {}
-  .layer__footer {}
+  .layer__header {
+    position: absolute;
+    top: 0;
+  }
+  .layer__footer {
+    position: absolute;
+    bottom: 0;
+  }
 
   .layer__neurons {
     width: 100%;
