--- a/src/scss/modules/global.scss
+++ b/src/scss/modules/global.scss
@@ -12,6 +12,18 @@ body {
   font-family: monospace;
   background: $black;
   color: $white;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: black;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $white;
 }
