--- a/src/scss/modules/layer.scss
+++ b/src/scss/modules/layer.scss
@@ -13,6 +13,7 @@
     position: absolute;
     top: 0;
   }
+
   .layer__footer {
     position: absolute;
     bottom: 0;
@@ -22,6 +23,7 @@
     width: 100%;
     height: 100%;
     display: flex;
+    // flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
