--- a/src/scss/modules/neural-network.scss
+++ b/src/scss/modules/neural-network.scss
@@ -1,79 +1,52 @@
 .neural-network {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
 
+  .neural-network__header {
+    width: 100%;
+    border-bottom: 1px solid $white;
+  }
+
   .neural-network__body {
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 90%;
 
-    .neural-network__layers {
+    .neural-network__network {
+      position: relative;
       width: 80%;
       height: 100%;
-      display: flex;
-      padding: 10px;
       border-right: 1px solid $white;
 
-      .neural-network__label {
+      .neural-network__layers {
+        width: 100%;
         height: 100%;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
+        padding: 10px;
+      }
+
+      .neural-network__stats {
+        padding: 10px;
+        position: absolute;
+        top: 0;
+        left: 0;
       }
     }
 
     .neural-network__dataset {
       width: 20%;
-      display: flex;
-      flex-direction: column;
-      padding: 10px;
-
-      .data {
-        display: flex;
-        width: 100%;
-        background: black;
-        user-select: none;
-        border-radius: 2px;
-        border: 2px solid black;
-        cursor: pointer;
-
-        .data__input, .data__output, .data__error {
-          padding: 10px;
-          padding-right: 0;
-
-          &.data__input {
-            &:after {
-              content: '->';
-              padding-left: 10px;
-            }
-          }
-
-          &.data__error {
-            &:before {
-              content: 'E:';
-            }
-          }
-        }
-
-        &.active {
-          background: $white;
-          color: $black;
-        }
-
-        &.selected, &:hover {
-          border: 2px solid $white;
-        }
-      }
+      height: 100%;
     }
   }
 
   .neural-network__footer {
+    border-top: 1px solid $white;
+
     .neural-network__controls {
       width: 100%;
       display: flex;
@@ -89,10 +62,5 @@
         cursor: pointer;
       }
     }
-  }
-
-  .neural-network__stats {
-    padding: 10px;
-    position: absolute;
   }
 }
