--- a/src/scss/modules/neuron.scss
+++ b/src/scss/modules/neuron.scss
@@ -2,7 +2,6 @@
   position: relative;
   width: 50px;
   height: 50px;
-  margin: 10px;
   border-radius: 100%;
   border: 1px solid $white;
   display: flex;
@@ -10,6 +9,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  background: $black;
 
   .neuron__value {}
 
