--- a/src/scss/modules/dataset.scss
+++ b/src/scss/modules/dataset.scss
@@ -1,4 +1,5 @@
 .dataset {
+  position: absolute;
   width: 100%;
   height: 100%;
   display: flex;
@@ -21,7 +22,6 @@
       display: flex;
       width: 100%;
       user-select: none;
-      border-radius: 2px;
       cursor: pointer;
 
       .data-input, .data-output, .data-error {
