--- a/src/scss/modules/neural-network.scss
+++ b/src/scss/modules/neural-network.scss
@@ -8,22 +8,27 @@
   flex-direction: column;
 
   .neural-network__header {
+    padding: 1px 5px;
     width: 100%;
-    border-bottom: 1px solid $white;
+    //border-bottom: 1px solid $white;
+    background: black;
   }
 
   .neural-network__body {
     display: flex;
     width: 100%;
-    height: 90%;
+    height: 100%;
+    flex: 1;
 
     .neural-network__network {
       position: relative;
       width: 80%;
       height: 100%;
-      border-right: 1px solid $white;
 
       .neural-network__layers {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
         display: flex;
@@ -31,28 +36,74 @@
       }
 
       .neural-network__stats {
-        padding: 10px;
+        padding: 5px;
+        margin: 5px;
         position: absolute;
         top: 0;
         left: 0;
+        background: black;
+        z-index: 1;
+      }
+
+      .neural-network__input-box {
+        padding: 5px;
+        margin: 5px;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background: black;
+        z-index: 1;
+
+        .input-box {
+          position: relative;
+          display: flex;
+          align-items: flex-start;
+
+          input {
+            outline: none;
+            border: 1px solid $white;
+            border-radius: 0;
+            color: $white;
+            background: black;
+            padding: 5px;
+
+            &[name="nn-input"] {}
+            &[name="nn-output"] {
+              width: 50px;
+            }
+          }
+
+          .input-box__button {
+            height: 100%;
+            width: 50px;
+            margin: 0 5px;
+            padding: 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid $white;
+            background: $black;
+            cursor: pointer;
+          }
+        }
       }
     }
 
     .neural-network__dataset {
       width: 20%;
       height: 100%;
+      position: relative;
     }
   }
 
   .neural-network__footer {
-    border-top: 1px solid $white;
+    width: 100%;
 
     .neural-network__controls {
       width: 100%;
       display: flex;
       justify-content: flex-start;
       user-select: none;
-      border-top: 1px solid $white;
       padding: 10px;
 
       .neural-network__control {
