--- a/src/scss/modules/canvas.scss
+++ b/src/scss/modules/canvas.scss
@@ -3,7 +3,7 @@ canvas {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: black;
+  background: black; // radial-gradient(#111, #222);
   //background: #22f;
   //outline: 2px solid white;
   //box-shadow: 4px 4px 32px rgba(black, 1);
